--- a/5.4-fpm/Dockerfile
+++ b/5.4-fpm/Dockerfile
@@ -1,10 +1,18 @@
 FROM php:5.4-fpm
 
-RUN docker-php-ext-install pdo_mysql && docker-php-ext-configure pdo_mysql
-RUN docker-php-ext-install mbstring && docker-php-ext-configure mbstring
+RUN apt-get update && \
+    apt-get install -y \
+        libfreetype6-dev \
+        libjpeg62-turbo-dev \
+        libmcrypt-dev \
+        libpng12-dev \
+    && docker-php-ext-install iconv mcrypt pdo_mysql mbstring \
+    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-install gd
 
 
-COPY start.sh .
+
+COPY start.sh start.sh
 RUN chmod +x start.sh
 
 CMD ["start.sh"]
