--- a/5.4-fpm/Dockerfile
+++ b/5.4-fpm/Dockerfile
@@ -6,13 +6,13 @@ RUN apt-get update && \
         libjpeg62-turbo-dev \
         libmcrypt-dev \
         libpng12-dev \
-    && docker-php-ext-install iconv mcrypt pdo_mysql mbstring \
+    && docker-php-ext-install mcrypt pdo_mysql mbstring \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd
 
 
 
-COPY start.sh start.sh
-RUN chmod +x start.sh
+COPY start.sh /usr/local/bin/start.sh
+RUN chmod +x /usr/local/bin/start.sh
 
 CMD ["start.sh"]
