--- a/5.5-fpm/Dockerfile
+++ b/5.5-fpm/Dockerfile
@@ -11,6 +11,8 @@ RUN apt-get update && \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd
 
+RUN pecl install apc
+RUN echo "extension=apc.so" > /usr/local/etc/php/conf.d/apc.ini
 
 
 COPY start.sh /usr/local/bin/start.sh
