Add some modules

--- a/5.6-fpm/Dockerfile
+++ b/5.6-fpm/Dockerfile
@@ -1,26 +1,48 @@
 FROM php:5.6-fpm
 MAINTAINER neolao <contact@neolao.com>
 
-# Install dependencies
-RUN apt-get update && \
-    apt-get install -y \
-        libfreetype6-dev \
-        libjpeg62-turbo-dev \
-        libmcrypt-dev \
-        libpng12-dev \
-        unzip \
-        php5-dev \
-    && docker-php-ext-install mcrypt pdo_mysql mbstring \
-    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
-    && docker-php-ext-install gd
 
+RUN apt-get update
+
+
+# Install bcmath
+RUN docker-php-ext-install bcmath
+
+# Install bz2
+RUN apt-get install -y libbz2-dev
+RUN docker-php-ext-install bz2
+
+# Install GD
+RUN apt-get install -y libfreetype6-dev libjpeg62-turbo-dev libpng12-dev
+RUN docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/
+RUN docker-php-ext-install gd
+
+# Install mbstring
+RUN docker-php-ext-install mbstring
+
+# Install mcrypt
+RUN apt-get install -y libmcrypt-dev
+RUN docker-php-ext-install mcrypt
+
+# Install PDO
+# RUN apt-get install -y freetds-dev php5-sybase
+RUN docker-php-ext-install pdo 
+RUN docker-php-ext-install pdo_mysql 
+# RUN docker-php-ext-install pdo_oci
+# RUN docker-php-ext-install pdo_odbc
+RUN apt-get install -y libpq-dev
+RUN docker-php-ext-install pdo_pgsql
+RUN apt-get install -y libsqlite3-dev
+RUN docker-php-ext-install pdo_sqlite
 
 # Install APC
 RUN pecl install apc
 RUN echo "extension=apc.so" > /usr/local/etc/php/conf.d/apc.ini
 
 
+
 # Install phpredis 2.2.7
+RUN apt-get install -y unzip php5-dev
 WORKDIR /root
 COPY phpredis-2.2.7.zip phpredis-2.2.7.zip
 RUN unzip phpredis-2.2.7.zip
