--- a/5.4-fpm/Dockerfile
+++ b/5.4-fpm/Dockerfile
@@ -38,6 +38,20 @@ RUN docker-php-ext-install pdo_sqlite
 RUN pecl install apc
 RUN echo "extension=apc.so" > /usr/local/etc/php/conf.d/apc.ini
 
+# Install phpredis 2.2.7
+RUN apt-get install -y unzip php5-dev
+WORKDIR /root
+COPY phpredis-2.2.7.zip phpredis-2.2.7.zip
+RUN unzip phpredis-2.2.7.zip
+WORKDIR phpredis-2.2.7
+RUN phpize
+RUN ./configure
+RUN make && make install
+RUN cp /root/phpredis-2.2.7/modules/redis.so /usr/lib/php5/20131226/
+RUN mkdir /etc/php5/conf.d
+RUN echo "extension=redis.so" > /etc/php5/conf.d/redis.ini
+RUN echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini
+
 
 COPY start.sh /usr/local/bin/start.sh
 RUN chmod +x /usr/local/bin/start.sh
