Add more modules

--- a/5.6-fpm/Dockerfile
+++ b/5.6-fpm/Dockerfile
@@ -5,12 +5,22 @@ MAINTAINER neolao <contact@neolao.com>
 RUN apt-get update
 
 
+# Install APC
+RUN pecl install apc
+RUN echo "extension=apc.so" > /usr/local/etc/php/conf.d/apc.ini
+
 # Install bcmath
 RUN docker-php-ext-install bcmath
 
 # Install bz2
 RUN apt-get install -y libbz2-dev
 RUN docker-php-ext-install bz2
+
+# Install calendar
+RUN docker-php-ext-install calendar
+
+# Install dba
+RUN docker-php-ext-install dba
 
 # Install GD
 RUN apt-get install -y libfreetype6-dev libjpeg62-turbo-dev libpng12-dev
@@ -35,12 +45,6 @@ RUN docker-php-ext-install pdo_pgsql
 # RUN apt-get install -y libsqlite3-dev
 # RUN docker-php-ext-install pdo_sqlite
 
-# Install APC
-RUN pecl install apc
-RUN echo "extension=apc.so" > /usr/local/etc/php/conf.d/apc.ini
-
-
-
 # Install phpredis 2.2.7
 RUN apt-get install -y unzip php5-dev
 WORKDIR /root
@@ -54,6 +58,15 @@ RUN cp /root/phpredis-2.2.7/modules/redis.so /usr/lib/php5/20131226/
 RUN mkdir /etc/php5/conf.d
 RUN echo "extension=redis.so" > /etc/php5/conf.d/redis.ini
 RUN echo "extension=redis.so" > /usr/local/etc/php/conf.d/redis.ini
+
+# Install XSL
+RUN apt-get install -y libxslt-dev
+RUN docker-php-ext-install xsl
+
+# Install xmlrpc
+RUN docker-php-ext-install xmlrpc
+
+
 
 # Include the start script
 COPY start.sh /usr/local/bin/start.sh
