--- a/5.6-fpm/Dockerfile
+++ b/5.6-fpm/Dockerfile
@@ -78,6 +78,15 @@ RUN docker-php-ext-install memcached-2.2.0
 RUN pecl install mongo
 RUN echo "extension=mongo.so" > /usr/local/etc/php/conf.d/mongo.ini
 
+# Install ftp
+RUN docker-php-ext-install ftp
+
+# Install intl
+RUN apt-get install -y libicu-dev
+RUN pecl install intl
+RUN docker-php-ext-install intl
+
+
 
 
 # Include the start script
